--- a/template.yaml
+++ b/template.yaml
@@ -2,58 +2,48 @@ apiVersion: backstage.io/v1beta2
 kind: Template
 metadata:
   name: tomcat-deployment-template
-  title: Tomcat Application Deployment
-  description: Template for deploying a Tomcat application using ArgoCD on Kubernetes
-  tags:
-    - argocd
-    - kubernetes
-    - tomcat
+  title: Tomcat Deployment on Minikube with ArgoCD
+  description: Scaffolds a project to deploy a Tomcat application on Minikube using ArgoCD
 spec:
-  owner: yeavov@gmail.com
+  owner: your-team
   type: service
-
   parameters:
     - title: Application Configuration
       required:
         - name
-        - repoUrl
+        - githubOrg
       properties:
         name:
           type: string
           title: Application Name
-          description: Unique name for the application
-        repoUrl:
+          description: Unique name for the Tomcat application
+        githubOrg:
           type: string
-          title: Repository URL
-          description: URL of the Git repository containing the application source code
-
+          title: GitHub Organization/User
+          description: The GitHub organization or user where the repository will be created
   steps:
-    - id: fetch-base
-      name: Fetch Base Templates
-      action: fetch:template
+    - id: scaffold
+      name: Scaffold Files
+      action: fetch:cookiecutter
       input:
-        url: ./path/to/tomcat-kubernetes-base-templates
-    - id: prepare-k8s-manifests
-      name: Prepare Kubernetes Manifests
-      action: template
+        url: https://github.com/yellowjung/backstage_catalog.git
+        directory: /skeleton
+        values:
+          name: '{{ parameters.name }}'
+    - id: createRepo
+      name: Create GitHub Repository
+      action: publish:github
       input:
-        templatePath: tomcat-deployment.yaml
-        output: ./kubernetes
-    - id: prepare-argocd-manifest
-      name: Prepare ArgoCD Manifest
-      action: template
-      input:
-        templatePath: argocd-application.yaml
-        output: ./argocd
-    - id: publish
-      name: Publish to Git
-      action: publish:git
-      input:
-        repoUrl: ${{ parameters.repoUrl }}
-
+        org: '{{ parameters.githubOrg }}'
+        name: '{{ parameters.name }}'
+        private: false
+        files:
+          - path: deployment.yaml
+          - path: service.yaml
+          - path: argocd-app.yaml
   output:
     links:
-      - url: ${{ steps.publish.output.repoUrl }}
-        title: Source Code Repository
-      - url: https://argocd.example.com/applications/${{ parameters.name }}
-        title: ArgoCD Application
+      - url: https://github.com/{{ parameters.githubOrg }}/{{ parameters.name }}
+        title: View the GitHub Repository
+      - url: https://argocd.yourdomain.com/applications/{{ parameters.name }}
+        title: View the Application in ArgoCD
