--- a/template.yaml
+++ b/template.yaml
@@ -1,4 +1,4 @@
-apiVersion: backstage.io/v1beta2
+apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: tomcat-deployment-template
