change url, dir

--- a/template.yaml
+++ b/template.yaml
@@ -26,8 +26,9 @@ spec:
       name: Scaffold Files
       action: fetch:template
       input:
-        url: ./skeleton
+        url: https://github.com/yellowjung/backstage_catalog.git
           cookiecutterCompat: true
+        directory: skeleton
         values:
           name: '{{ parameters.name }}'
     - id: createRepo
