--- a/template.yaml
+++ b/template.yaml
@@ -36,7 +36,7 @@ spec:
       input:
         org: '{{ parameters.githubOrg }}'
         name: '{{ parameters.name }}'
-        repoURL: 'https://github.com/{{ parameters.githubOrg }}/{{ parameters.name }}'
+        repoUrl: 'https://github.com/{{ parameters.githubOrg }}/{{ parameters.name }}'
         defaultBranch: main
         private: false
         files:
