add $ and delete https

--- a/skeleton/argocd-app.yaml
+++ b/skeleton/argocd-app.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: {{ parameters.name }}-tomcat
+  name: ${{ parameters.name }}-tomcat
 spec:
   project: default
   source:
-    repoURL: 'https://github.com/{{ parameters.githubOrg }}/{{ parameters.name }}'
+    repoURL: 'github.com/${{ parameters.githubOrg }}/${{ parameters.name }}'
     path: .
     targetRevision: HEAD
   destination:
