--- a/skeleton/service.yaml
+++ b/skeleton/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ parameters.name }}-tomcat-service
+  name: ${{ parameters.name }}-tomcat-service
 spec:
   type: NodePort
   selector:
-    app: {{ parameters.name }}-tomcat
+    app: ${{ parameters.name }}-tomcat
   ports:
   - port: 8080
     targetPort: 8080
