--- a/skeleton/argocd-app.yaml
+++ b/skeleton/argocd-app.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: '${{ values.url }}'
+    repoURL: '${{ values.url.repo }}'
     path: .
     targetRevision: HEAD
   destination:
